Bug 1848746 - Avoid problems when <exception> is included before <new>. r=firefox-build-system-reviewers,ahochheiden

Differential Revision: https://phabricator.services.mozilla.com/D186201